working shadowjar with submodules